[package]
name = "nethernet-test"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = { version="0.8.4" }
byteorder = "1.5.0"
ecb = { version="0.1.2", features=["alloc"]}
env_logger = "0.11.8"
hmac = "0.12.1"
log = "0.4.27"
rand = "0.9.2"
sha2 ={ version = "0.10.9", features=["asm","asm-aarch64"]}
